--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/themes": "^3.2.0",
     "@vercel/speed-insights": "^1.1.0",
     "next": "15.1.6",
