--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
+    "@stackframe/stack": "^2.7.30",
     "@vercel/speed-insights": "^1.2.0",
     "next": "^15.2.4",
     "react": "^19.1.0",
